Added some admin cruds

--- a/EatEaze.AdminWebApplication/Views/Restaraunts/Index.cshtml
+++ b/EatEaze.AdminWebApplication/Views/Restaraunts/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<EatEaze.Data.Entities.Restaraunt>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Restaraunts";
 }
 
 <h1>Index</h1>
