--- a/EatEaze.AdminWebApplication/Views/CategoriesAdmin/Index.cshtml
+++ b/EatEaze.AdminWebApplication/Views/CategoriesAdmin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<EatEaze.Data.Entities.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
 }
 
 <h1>Index</h1>
