--- a/EatEaze.AdminWebApplication/Views/Shared/_Layout.cshtml
+++ b/EatEaze.AdminWebApplication/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EatEaze.AdminWebApplication</title>
+    <title>@ViewData["Title"] - EatEaze Admin</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EatEaze.AdminWebApplication.styles.css" asp-append-version="true" />
@@ -24,6 +24,15 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CategoriesAdmin" asp-action="Index">Categories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Restaraunts" asp-action="Index">Restaraunts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PositionsAdmin" asp-action="Index">Positions</a>
                         </li>
                     </ul>
                 </div>
