Added admin panel (it works!)

--- a/EatEaze.AdminWebApplication/Views/CategoriesAdmin/Create.cshtml
+++ b/EatEaze.AdminWebApplication/Views/CategoriesAdmin/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model EatEaze.Data.Entities.Category
+﻿@model EatEaze.AdminWebApplication.Models.CategoriesViewModel
 
 @{
     ViewData["Title"] = "Create";
