--- a/EatEaze.AdminWebApplication/Views/PositionsAdmin/Create.cshtml
+++ b/EatEaze.AdminWebApplication/Views/PositionsAdmin/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model EatEaze.Data.Entities.Position
+﻿@model EatEaze.AdminWebApplication.Models.PositionsViewModel
 
 @{
     ViewData["Title"] = "Create";
