--- a/EatEaze.AdminWebApplication/Views/Restaraunts/Create.cshtml
+++ b/EatEaze.AdminWebApplication/Views/Restaraunts/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model EatEaze.Data.Entities.Restaraunt
+﻿@model EatEaze.AdminWebApplication.Models.RestarauntsViewModel
 
 @{
     ViewData["Title"] = "Create";
